# api-tools-integration-demo

./: README.md  pyproject.toml
hf/: hf-api.ipynb
openai/: openai-api-integration.ipynb
