[project]
name = "api-tools-integration-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.33.1",
    "openai>=1.93.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.1",
]
